--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=spring_boot_backend
 #server.servlet.context-path=/ems
 #server.servlet.session.persistent=false
 #DB properties
-spring.datasource.url=jdbc:mysql://localhost:3306/blogs2?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/globe_connect_project?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=kd1-86656-shweta
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA properties
 spring.jpa.show-sql = true
